--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,32 @@ html {
 body {
     font-family: "Roboto", sans-serif;
     font-size: 1rem;
-    color: #333
+    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
     all: unset;
     cursor: pointer;
+}
+
+div {
+    border: 1px solid #333;
+}
+
+/* Calculator Styles */
+
+.container {
+    height: 35rem;
+    width: 25rem;
+    margin: 5rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.button-grid {
+    
 }
