--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
 :root {
     --primary-color: #333;
     --secondary-color: #fff;
+    --screen-color: #e8e8e8;
     --accent-color: #ff7700;
     --secondary-accent-color: #ff4141;
-    --spacing-unit: 1rem;
+    --background-color: #C8C8C8
 }
 
 /* Normalize */
@@ -19,12 +20,13 @@
 html {
     font-size: 16px;
     height: 100%;
+    width: 100%;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Noto Sans Mono", sans-serif;
     font-size: 1rem;
-    color: #333;
+    color: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,10 +35,18 @@ body {
 button {
     all: unset;
     cursor: pointer;
+    font-size: 1.5rem;
+    border: 2px solid var(--primary-color);
+    border-radius: 0.5rem;
+    height: 4rem;
+    width: 4.5rem;
+    text-align: center;
+    background-color: var(--primary-color);
+    color: var(--secondary-color)
 }
 
 div {
-    border: 1px solid #333;
+    border-radius: 1rem;
 }
 
 /* Calculator Styles */
@@ -46,10 +56,65 @@ div {
     width: 25rem;
     margin: 5rem;
     padding: 2rem;
+    border: 0.5rem solid var(--primary-color);
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: var(--background-color);
+}
+
+.screen {
+    border: 2px solid var(--primary-color);
+    border-radius: 0.3rem;
+    font-size: 2.5rem;
+    margin: 1rem;
+    padding: 0 1rem;
+    height: 5rem;
+    width: 20rem;
+    text-align: right;
+    background-color: var(--screen-color);
+    color: var(--primary-color);
 }
 
 .button-grid {
-    
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 5rem;
+    padding: 2rem;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    height: 5rem;
+    width: 20rem;
+}
+
+.row-1 button {
+    width: 8rem;
+    font-weight: bold;
+}
+
+.add,
+.subtract,
+.multiply,
+.divide,
+.delete {
+    background-color: var(--accent-color);
+    color: var(--secondary-color)
+}
+
+
+.clear {
+    background-color: var(--secondary-accent-color);
+    color: var(--secondary-color);
+    font-size: 1.5rem;
+}
+
+.delete {
+    font-size: 2.5rem;
 }
