Add button animations and screen functionality

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ button {
     width: 4.5rem;
     text-align: center;
     background-color: var(--primary-color);
-    color: var(--secondary-color)
+    color: var(--secondary-color);
+    transition: transform 0.1s ease;
 }
 
 div {
@@ -56,7 +57,7 @@ div {
     width: 25rem;
     margin: 5rem;
     padding: 2rem;
-    border: 0.5rem solid var(--primary-color);
+    border: 0.3rem solid var(--primary-color);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
